--- a/components/allRecipes/allRecipes.css
+++ b/components/allRecipes/allRecipes.css
@@ -4,9 +4,47 @@
 }
 
 #searchRecipes {
-    background-image: url(../../media/images/searchicon2.png);
+    background-image: url(../../media/images/searchicon.png);
     background-position: center;
     background-size: cover;
-    height: 20px;
-    width: 20px;
+    height: 25px;
+    width: 25px;
 }
+
+#navigationIcon {
+    background-image: url(../../media/landingPageImg/Icon.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 35px;
+    width: 35px;
+}
+
+#navigationContainer {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+}
+
+#navigationLeft {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    flex-grow: 1;
+    flex-basis: 0;
+    font-family: Moulpali;
+    font-size: 22px;
+}
+
+#navigationRight {
+    display: flex;
+    justify-content: end;
+    flex-grow: 1;
+    flex-basis: 0;
+    font-family: Moulpali;
+    font-size: 22px;
+}
+
+#navigationMiddle {
+    display: flex;
+    align-items: center;
+    height: 48px;
