--- a/index.css
+++ b/index.css
@@ -5,6 +5,21 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Moulpali';
+    src: url('fonts/Moulpali/Moulpali-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Rampart_One';
+    src: url('fonts/Rampart_One/RampartOne-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('fonts/Montserrat/static/Montserrat-Black.ttf');
+}
+
 * {
     box-sizing: border-box;
 }
