--- a/components/allRecipes/allRecipes.css
+++ b/components/allRecipes/allRecipes.css
@@ -15,8 +15,9 @@
     background-image: url(../../media/landingPageImg/Icon.jpg);
     background-position: center;
     background-size: cover;
-    height: 35px;
-    width: 35px;
+    height: 50px;
+    width: 50px;
+    margin-bottom: 20px;
 }
 
 #navigationContainer {
@@ -48,3 +49,4 @@
     display: flex;
     align-items: center;
     height: 48px;
+}
