--- a/components/landingPage/landingPage.css
+++ b/components/landingPage/landingPage.css
@@ -10,16 +10,64 @@
 #landingPageTopContainer {
     display: flex;
     justify-content: space-between;
+    margin: 2vw;
+    margin-bottom: 40px;
+}
+
+#landingPageIcon img {
+    height: 3vw;
+    width: 3vw;
+}
+
+#landingPageLogIn {
+    font-size: 20px;
 }
 
 #landingPageTitle {
     display: flex;
-
 }
 
 #landingPageTitle h3 {
     margin-top: 0;
     margin-right: 1vw;
-    font-size: 3vw;
-    font-family:
+    font-size: 40px;
+}
+
+#landingPageBottomContainer {
+    margin: 2vw;
+    display: flex;
+}
+
+#landingPageRight {
+    flex-grow: 1;
+}
+
+#landingPageLeft {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+#landingPageLeft h3 {
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 5px;
+
+}
+
+#slogan {
+    text-align: center;
+}
+
+#slogan h1 {
+    font-size: 50px;
+
+}
+
+
+
+#landingPageLeft p {}
+
+#landingPageLeft button {
+    width: 10vw;
 }
