--- a/components/logIn/logIn.css
+++ b/components/logIn/logIn.css
@@ -35,6 +35,7 @@
     width: 220px;
     text-align: center;
     font-family: Montserrat;
+    margin-bottom: 15px;
 }
 
 #passwordLogIn {
@@ -44,4 +45,33 @@
     width: 220px;
     text-align: center;
     font-family: Montserrat;
+    margin-bottom: 15px;
+}
+
+#logInParagraph {
+    font-family: Montserrat;
+    font-size: 28px;
+    margin-top: 10px;
+}
+
+#logInButton {
+    border: none;
+    background-color: rgb(117, 134, 80);
+    padding: 10px;
+    width: 150px;
+    border-radius: 12px;
+    font-family: Montserrat;
+    font-size: 12px;
+}
+
+#noAccountParagraph {
+    font-family: Montserrat;
+    margin: 15px 0 0 0;
+    font-size: 12px;
+}
+
+#createAccountParagraph {
+    margin: 3px 0 0 0;
+    font-family: Montserrat;
+    font-weight: bold;
 }
