--- a/components/logIn/logIn.css
+++ b/components/logIn/logIn.css
@@ -75,3 +75,12 @@
     font-family: Montserrat;
     font-weight: bold;
 }
+
+#closePopUp {
+    font-family: Montserrat;
+    font-size: 20px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 10px 15px 0 0;
+}
