--- a/components/logIn/logIn.css
+++ b/components/logIn/logIn.css
@@ -62,6 +62,7 @@
     border-radius: 12px;
     font-family: Montserrat;
     font-size: 12px;
+    cursor: pointer;
 }
 
 #noAccountParagraph {
@@ -74,6 +75,7 @@
     margin: 3px 0 0 0;
     font-family: Montserrat;
     font-weight: bold;
+    cursor: pointer;
 }
 
 #closePopUp {
@@ -83,4 +85,5 @@
     top: 0;
     right: 0;
     margin: 10px 15px 0 0;
+    cursor: pointer;
 }
