--- a/components/logIn/logIn.css
+++ b/components/logIn/logIn.css
@@ -87,3 +87,63 @@
     margin: 10px 15px 0 0;
     cursor: pointer;
 }
+
+#createAccountTitle {
+    font-family: Montserrat;
+    font-size: 28px;
+    margin-top: 10px;
+}
+
+#createUserName {
+    background-color: rgb(248, 249, 248);
+    border: 1px solid black;
+    height: 35px;
+    width: 220px;
+    text-align: center;
+    font-family: Montserrat;
+    margin-bottom: 15px;
+}
+
+#createPassword {
+    background-color: rgb(248, 249, 248);
+    border: 1px solid black;
+    height: 35px;
+    width: 220px;
+    text-align: center;
+    font-family: Montserrat;
+    margin-bottom: 15px;
+}
+
+#confirmPassword {
+    background-color: rgb(248, 249, 248);
+    border: 1px solid black;
+    height: 35px;
+    width: 220px;
+    text-align: center;
+    font-family: Montserrat;
+    margin-bottom: 15px;
+}
+
+#createAccountButton {
+    border: none;
+    background-color: rgb(117, 134, 80);
+    padding: 10px;
+    width: 150px;
+    border-radius: 12px;
+    font-family: Montserrat;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+#alreadyUserParagraph {
+    font-family: Montserrat;
+    margin: 15px 0 0 0;
+    font-size: 12px;
+}
+
+#goToLogInParagraph {
+    margin: 3px 0 0 0;
+    font-family: Montserrat;
+    font-weight: bold;
+    cursor: pointer;
+}
