--- a/components/allRecipes/allRecipes.css
+++ b/components/allRecipes/allRecipes.css
@@ -1,6 +1,6 @@
-#allRecipesPage {
+/* #allRecipesPage {
     margin: 40px;
-}
+} */
 
 #searchRecipes {
     background-image: url(../../media/images/searchicon.png);
@@ -10,52 +10,14 @@
     width: 25px;
 }
 
-#navigationIcon {
-    background-image: url(../../media/landingPageImg/Icon.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 50px;
-    width: 50px;
-    margin-bottom: 20px;
-}
-
-#navigationContainer {
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid black;
-    margin-bottom: 80px;
-}
-
-#navigationLeft {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-    flex-grow: 1;
-    flex-basis: 0;
-    font-family: Moulpali;
-    font-size: 22px;
-}
-
-#navigationRight {
-    display: flex;
-    justify-content: end;
-    flex-grow: 1;
-    flex-basis: 0;
-    font-family: Moulpali;
-    font-size: 22px;
-}
-
-#navigationMiddle {
-    display: flex;
-    align-items: center;
-    height: 48px;
-}
 
 #allRecipesContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 500px;
     gap: 40px;
+    margin-top: 80px;
+    margin: 80px 40px 0px 40px;
 }
 
 #logInOrUserName {
