--- a/components/recipePage/recipePage.css
+++ b/components/recipePage/recipePage.css
@@ -1,13 +1,17 @@
-#recipePage {
+#recipeContainer {
     display: flex;
     height: 100vh;
-    margin: 0px;
+
+}
+
+#navigationContainer {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin: 40px 40px 0px 40px;
 }
 
 #recipeImg {
-    /* background-image: url("../../media/images/chilibowl.webp");
-    background-position: center;
-    background-repeat: no-repeat; */
     height: 100vh;
     width: 50%;
 
