--- a/index.css
+++ b/index.css
@@ -1,3 +1,30 @@
+@font-face {
+    font-family: 'Poppins';
+    src: url('fonts/Poppins/Poppins-Light.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Moulpali';
+    src: url('fonts/Moulpali/Moulpali-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Rampart_One';
+    src: url('fonts/Rampart_One/RampartOne-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('fonts/Montserrat/static/Montserrat-Light.ttf');
+}
+
 * {
     box-sizing: border-box;
+}
+
+body {
+    background-color: rgb(203, 209, 163);
+    margin: 0;
 }
