--- a/components/allRecipes/allRecipes.css
+++ b/components/allRecipes/allRecipes.css
@@ -14,7 +14,7 @@
 #allRecipesContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 500px;
+    grid-auto-rows: 80vh;
     gap: 40px;
     margin: 80px 40px 40px 40px;
 }
