--- a/components/recipesList/recipesList.css
+++ b/components/recipesList/recipesList.css
@@ -9,8 +9,8 @@
 }
 
 #recipeImageBox {
-    width: 300px;
-    height: 300px;
+    width: 45vh;
+    height: 45vh;
 }
 
 .recipeImage {
@@ -20,10 +20,18 @@
 }
 
 #recipesTextContainer {
-    
-    font-family: Montserrat;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     margin-top: 20px;
+}
+
+#recipeTextBox {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 45vh;
+    text-align: center;
+    font-family: Montserrat;
 }
 
 #recipeTimeContainer {
