--- a/components/sort/sort.css
+++ b/components/sort/sort.css
@@ -10,4 +10,30 @@
     height: 40px;
     font-family: Moulpali;
     border: 1px solid black;
+    background-color: rgb(248, 249, 248);
+}
+
+#divSort {
+    background-color: rgb(248, 249, 248);
+    width: 250px;
+    font-family: Moulpali;
+    border: 1px solid black;
+    position: absolute;
+    top: 88px;
+    left: 150px;
+    overflow: hidden;
+}
+
+#highestRanking,
+#lowestRanking,
+#longestTime,
+#shortestTime {
+    height: 50px;
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
+#checkShortestTime, #checkLongestTime, #checkLowestRanking, #checkHighestRanking {
+    margin-left: 10px;
 }
