--- a/components/recipesList/recipesList.css
+++ b/components/recipesList/recipesList.css
@@ -8,16 +8,18 @@
     margin-top: 30px;
 }
 
-#recipesListImageContainer{
-    width: 300px;
-    height: 300px;
-
+#recipeImageBox {
+    width: 45vh;
+    height: 45vh;
 }
+
+
 
 .recipeImage {
     height: 100%;
     width: 100%;
     object-fit: cover;
+
 }
 
 #recipesTextContainer {
@@ -52,5 +54,3 @@
     background-size: cover;
     margin-right: 5px;
 }
-
-
