--- a/components/recipePage/recipePage.css
+++ b/components/recipePage/recipePage.css
@@ -29,7 +29,6 @@
 
 #rightContainer {
     display: flex;
-    align-items: center;
     flex-direction: column;
     width: 50%;
     padding: 0px 55px;
@@ -41,6 +40,7 @@
     font-family: 'Montserrat-Black';
     font-size: 35px;
     text-align: center;
+    margin-bottom: 0;
 
 }
 
@@ -74,20 +74,19 @@
 }
 
 
-
-
 .rating {
-    max-width: 33rem;
-    background: #fff;
     margin: 0 1rem;
     padding: 1rem;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     width: 100%;
     border-radius: 0.5rem;
+    display: flex;
+    justify-content: center;
 }
 
+
 .star {
-    font-size: 10vh;
+    text-align: center;
+    font-size: 8vh;
     cursor: pointer;
 }
 
