--- a/index.css
+++ b/index.css
@@ -20,6 +20,13 @@
     src: url('fonts/Montserrat/static/Montserrat-Light.ttf');
 }
 
+@font-face {
+    font-family: 'Montserrat SB';
+    src: url('fonts/Montserrat/static/Montserrat-SemiBold.ttf');
+}
+
+
+
 * {
     box-sizing: border-box;
 }
