--- a/components/recipePage/recipePage.css
+++ b/components/recipePage/recipePage.css
@@ -202,11 +202,11 @@
 .heart {
     font-size: 5vw;
     cursor: pointer;
-    color: black;
+    color: #758650;
     transition: color 0.5s;
-    position: absolute;
+    position: fixed;
     top: 8.5vw;
-    left: 43vw;
+    left: 2vw;
 
 }
 
