added error message on recipe site

--- a/components/allRecipes/allRecipes.css
+++ b/components/allRecipes/allRecipes.css
@@ -22,3 +22,10 @@
 #logInOrUserName {
     cursor: pointer;
 }
+
+#message {
+    text-align: center;
+    margin-top: 100px;
+    font-size: 30px;
+    font-family: Montserrat SB;
+}
