--- a/components/profilePage/profilePage.css
+++ b/components/profilePage/profilePage.css
@@ -177,6 +177,7 @@
     width: 35vh;
     align-items: center;
     font-family: Montserrat;
+    text-align: center;
 }
 
 #favouriteRecipeTimeContainer {
