--- a/components/logIn/logIn.css
+++ b/components/logIn/logIn.css
@@ -137,7 +137,7 @@
 
 #alreadyUserParagraph {
     font-family: Montserrat;
-    margin: 15px 0 0 0;
+    margin: 5px 0 0 0;
     font-size: 12px;
 }
 
@@ -146,4 +146,13 @@
     font-family: Montserrat;
     font-weight: bold;
     cursor: pointer;
+}
+
+#messageCreate {
+    margin-top: 8px;
+    margin-bottom: 0;
+    padding: 0;
+    font-family: Montserrat;
+    font-size: 14px;
+    color: rgb(233, 73, 73);
 }
