--- a/components/profilePage/profilePage.css
+++ b/components/profilePage/profilePage.css
@@ -178,6 +178,7 @@
     align-items: center;
     font-family: Montserrat;
     text-align: center;
+    font-size: 14px;
 }
 
 #favouriteRecipeTimeContainer {
